# lib3mf-feedstock

./: README.md
.ci_support/: linux_64_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
.github/: CODEOWNERS
recipe/: 0001-Fix-bare-target_link_libraries.patch  0002-use-ctypes.util-to-find-library.patch  __init__.py  bld.bat  bld_lib3mf.bat  build.sh  build_lib3mf.sh  build_python.sh  meta.yaml  pyproject.toml
